--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   },
   "devDependencies": {
     "@types/node": "16.18.30",
-    "@typescript-eslint/eslint-plugin": "5.59.2",
-    "@typescript-eslint/parser": "5.59.2",
+    "@typescript-eslint/eslint-plugin": "5.59.6",
+    "@typescript-eslint/parser": "5.59.6",
     "@vercel/ncc": "0.36.1",
     "eslint": "8.40.0",
     "eslint-plugin-github": "4.7.0",
-    "jest": "^29.5.0",
+    "jest": "29.5.0",
     "prettier": "2.8.8",
     "rimraf": "5.0.0",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "29.1.0",
     "typescript": "5.0.4"
   },
   "volta": {
