--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,7 @@
 {
-  "recommendations": ["dbaeumer.vscode-eslint", "esbenp.prettier-vscode"]
+  "recommendations": [
+    "oderwat.indent-rainbow",
+    "ionutvmi.path-autocomplete",
+    "visualstudioexptteam.vscodeintellicode"
+  ]
 }
