--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint": "eslint --fix src/**/*.ts",
     "test": "jest",
     "typecheck": "tsc --noEmit",
-    "build": "tsc && ncc build --license licenses.txt",
-    "clean": "rimraf lib dist"
+    "build": "tsc && ncc build --minify --license licenses.txt",
+    "clean": "rimraf lib/ dist/"
   },
   "dependencies": {
     "@actions/core": "1.10.0"
