--- a/package.json
+++ b/package.json
@@ -10,22 +10,28 @@
     "lint": "eslint --fix src/**/*.ts",
     "test": "jest",
     "typecheck": "tsc --noEmit",
-    "build": "tsc && ncc build --minify --license licenses.txt",
+    "build": "rollup -c",
     "clean": "rimraf lib/ dist/"
   },
   "dependencies": {
     "@actions/core": "1.10.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "25.0.3",
+    "@rollup/plugin-node-resolve": "15.1.0",
+    "@rollup/plugin-swc": "0.1.1",
+    "@rollup/plugin-terser": "0.4.3",
+    "@swc/core": "1.3.71",
     "@types/node": "16.18.34",
     "@typescript-eslint/eslint-plugin": "5.59.6",
     "@typescript-eslint/parser": "5.59.6",
-    "@vercel/ncc": "0.36.1",
     "eslint": "8.40.0",
     "eslint-plugin-github": "4.7.0",
     "jest": "29.5.0",
     "prettier": "2.8.8",
     "rimraf": "5.0.0",
+    "rollup": "3.26.3",
+    "rollup-plugin-license": "3.0.1",
     "ts-jest": "29.1.0",
     "typescript": "5.0.4"
   },
