--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "format": "prettier --write .",
-    "lint": "eslint --fix src/**/*.ts",
+    "lint": "eslint --fix .",
     "test": "jest",
     "typecheck": "tsc --noEmit",
     "build": "rollup -c",
