--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: volta-cli/action@v4.0.0
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile --ignore-scripts
+        run: yarn install --immutable --immutable-cach
 
       - name: Rebuild the dist directory
         run: yarn run build
