--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,11 +20,8 @@ jobs:
 
       - uses: volta-cli/action@v4.0.0
 
-      - name: yarn version
-        run: yarn --version
-
       - name: Install dependencies
-        run: yarn install --immutable --immutable-cach
+        run: yarn install --immutable --immutable-cache
 
       - name: Run lint
         run: yarn run lint
