--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: volta-cli/action@v4.0.0
 
       - name: Install dependencies
-        run: yarn install --immutable --immutable-cach
+        run: yarn install --immutable --immutable-cache
 
       - name: Run test
         run: yarn run test
