Fix GitHub Actions workflow on check-dist

--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Compare the expected and actual dist directories
         run: |
-          if [ "$(git diff --ignore-space-at-eol ${{inputs.dist-path}} | wc -l)" -gt "0" ]; then
+          if [ "$(git diff --ignore-space-at-eol diff/ | wc -l)" -gt "0" ]; then
             echo "Detected uncommitted changes after the build. See the status below:"
             git diff
             exit 1
@@ -42,4 +42,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: dist
-          path: ${{inputs.dist-path}}
+          path: diff/
