--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@jest/globals": "29.6.2",
     "@rollup/plugin-commonjs": "25.0.3",
     "@rollup/plugin-node-resolve": "15.1.0",
-    "@rollup/plugin-swc": "0.1.1",
     "@rollup/plugin-terser": "0.4.3",
     "@swc/core": "1.3.71",
     "@types/node": "16.18.39",
@@ -32,6 +31,7 @@
     "rimraf": "5.0.1",
     "rollup": "3.27.0",
     "rollup-plugin-license": "3.0.1",
+    "rollup-plugin-swc3": "0.9.1",
     "ts-jest": "29.1.0",
     "typescript": "5.1.6"
   },
